# sentiric-b2bua-service

./: Cargo.toml  Dockerfile  LOGIC.md  README.md  TASKS.md  docker-compose.yml
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  rabbitmq.rs  telemetry.rs  tls.rs
src/grpc/: client.rs  mod.rs  service.rs
src/sip/: engine.rs  mod.rs  server.rs  state.rs  store.rs
src/sip/handlers/: calls.rs  events.rs  media.rs  mod.rs
