[package]
name = "sentiric-b2bua-service"
version = "1.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
hyper = { version = "0.14.28", features = ["full"] } 
config = "0.14" 
rand = "0.8"
uuid = { version = "1.8", features = ["v4"] }
dashmap = "5.5"

# YENİ EKLENENLER: RabbitMQ ve Serde
lapin = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.13.3" }
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.2.9" }