[package]
name = "sentiric-b2bua-service"
version = "1.3.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config & Data
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dashmap = "5.5" # Thread-safe in-memory state

# External Systems
lapin = "2.3.1" # RabbitMQ
redis = { version = "0.26", features = ["tokio-rustls-comp"] }

# HTTP (Health Check)
hyper = { version = "0.14", features = ["full"] }

# --- THE IRON CORE ---
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.3.3" }
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.13.6" }